--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -1,8 +1,7 @@
 @import 'base';
 @import 'colors';
 @import 'fonts';
-@import 'themes/dark';
-@import 'themes/light';
+@import 'theme';
 @import 'variables';
 @import 'tooltip';
 @import 'type-styles';
