--- a/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
+++ b/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
@@ -3,7 +3,7 @@
 }
 
 .tox .tox-tbtn {
-	height: 36px;
+	height: var(--height-small);
 	margin: 0;
 	color: var(--foreground-normal);
 }
@@ -30,7 +30,7 @@
 	display: inline-block;
 	margin-top: 4px;
 	color: var(--foreground-normal);
-	font-size: 24px;
+	font-size: var(--font-size-larger);
 	font-family: 'Material Icons';
 	content: 'format_bold';
 	font-feature-settings: 'liga';
@@ -44,7 +44,7 @@
 	display: inline-block;
 	margin-top: 4px;
 	color: var(--foreground-normal);
-	font-size: 24px;
+	font-size: var(--font-size-larger);
 	font-family: 'Material Icons';
 	content: 'format_italic';
 	font-feature-settings: 'liga';
@@ -58,7 +58,7 @@
 	display: inline-block;
 	margin-top: 4px;
 	color: var(--foreground-normal);
-	font-size: 24px;
+	font-size: var(--font-size-larger);
 	font-family: 'Material Icons';
 	content: 'format_underlined';
 	font-feature-settings: 'liga';
@@ -72,7 +72,7 @@
 	display: inline-block;
 	margin-top: 4px;
 	color: var(--foreground-normal);
-	font-size: 24px;
+	font-size: var(--font-size-larger);
 	font-family: 'Material Icons';
 	content: 'insert_link';
 	font-feature-settings: 'liga';
@@ -198,7 +198,7 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-dialog__header {
 	padding: 20px;
 	color: var(--foreground-normal);
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	background-color: var(--background-page);
 }
 
@@ -225,7 +225,7 @@ body.dark .tox .tox-toolbar__overflow {
 	padding: 12px;
 	color: var(--foreground-normal);
 	font-weight: 500;
-	font-size: 14px;
+	font-size: var(--font-size-small);
 	font-family: var(--family-sans-serif);
 	background-color: var(--background-page);
 	border: 2px solid var(--border-normal);
@@ -288,11 +288,11 @@ body.dark .tox .tox-toolbar__overflow {
 	align-items: center;
 	justify-content: center;
 	min-width: 136px;
-	height: 44px;
+	height: var(--height-medium);
 	padding: 0 20px 1px;
 	color: var(--white);
 	font-weight: 500;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	font-family: var(--family-sans-serif);
 	line-height: 19px;
 	background-color: var(--primary);
@@ -346,7 +346,7 @@ body.dark .tox .tox-toolbar__overflow {
 	margin-bottom: 4px;
 	color: var(--foreground-normal);
 	font-weight: 500;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 }
 
 .tox .tox-dialog__body-nav-item {
@@ -356,7 +356,7 @@ body.dark .tox .tox-toolbar__overflow {
 	padding: 12px 16px;
 	color: var(--foreground-normal);
 	font-weight: 500;
-	font-size: 14px;
+	font-size: var(--font-size-small);
 	border-bottom: none;
 	border-radius: var(--border-radius);
 	transition: var(--fast) var(--transition);
