--- a/app/src/styles/_colors.scss
+++ b/app/src/styles/_colors.scss
@@ -1,6 +1,17 @@
-@import 'themes/mixins/generate-colors';
+@import 'mixins/generate-colors';
 
-// Main palette
+:root {
+	/*
+	--brand: var(--primary); // will be overridden with directus_settings.project_color
+	--primary: var(--brand);
+	*/
+	--white: #fff;
+	--black: #090c0d;
+
+}
+
+// Primary colors
+
 $purple: #6644ff;
 $pink: #ff99dd;
 $blue: #3399ff;
@@ -9,14 +20,9 @@ $yellow: #fbc54f;
 $orange: #ffa439;
 $red: #e35169;
 
-// Mixing colors
-$light-theme-tint: #fff;
-$light-theme-shade: #2e3c43;
-$dark-theme-tint: #fff;
-$dark-theme-shade: #16151a;
-
 // Color variant names -> Color to map to said name
-$color-mapping: (
+
+$color-mapping-light: (
 	'purple': $purple,
 	'pink': $pink,
 	'blue': $blue,
@@ -24,16 +30,25 @@ $color-mapping: (
 	'yellow': $yellow,
 	'orange': $orange,
 	'red': $red,
-	'primary': $purple,
 	'secondary': $pink,
 	'success': $green,
 	'warning': $orange,
 	'danger': $red,
 );
 
+$purple: #8866ff;
+$color-mapping-dark: map-merge(
+	$color-mapping-light,
+	(
+		'secondary': $pink,
+	)
+);
+
+
 // Suffix -> Percentage mapping (Percentage of main color)
 // Negative numbers will use secondary color for mixture.
 // The percentage will be equal to the absolute value of the number.
+
 $step-mapping: (
 	'10': 10,
 	'25': 25,
