--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -1,24 +1,86 @@
 :root {
-	--brand: var(--primary); // will be overridden with directus_settings.project_color
-	--white: #fff;
-	--black: #090c0d;
+
+	// Typography
+
+	--font-size-tiny: 9px;
+	--font-size-smallest: 11px;
+	--font-size-smaller: 12px;
+	--font-size-small: 14px;
+	--font-size-medium: 16px;
+	--font-size-large: 19px;
+	--font-size-larger: 24px;
+	--font-size-largest: 36px; 
+	--font-size-massive: 42px; 
+
+	--font-size: var(--font-size-small);
+
+	--weight-normal: 500;
+	--weight-strong: 600;
+
+	// Borders
+
+	--border-width: 2px;
+	--border-radius-outline: 6px;
+	--border-radius: 8px;
+
+	// Content Sizes
+
+	--header-bar-height: 61px;
+	--content-padding: 12px;
+
+	--height-largest: 60px;
+	--height-large: 52px;
+	--height-medium: 44px;
+	--height-small: 36px;
+	--height-smallest: 28px;
+
+	// Form Layout
+
+	--form-column-width: 300px;
+	--form-column-max-width: 380px;
+
+	--form-horizontal-gap: 32px;
+	--form-vertical-gap: 40px;
+
+	// Inputs
+
+	--input-height: var(--height-largest);
+
+	--input-height-tall: 168px;
+	--input-height-max: 500px;
+
+	--input-padding: 12px;
+	--input-padding: calc( 16px); /* (60 - 4 - 24) / 2 */
+
+	// Transitions
+
 	--transition: cubic-bezier(0.4, 0, 0.2, 1);
 	--transition-in: cubic-bezier(0, 0, 0.2, 1);
 	--transition-out: cubic-bezier(0.4, 0, 1, 1);
+
 	--fast: 125ms;
 	--medium: 200ms;
 	--slow: 300ms;
-	--header-bar-height: 61px;
-	--content-padding: 12px;
-	--border-width: 2px;
-	--border-radius-outline: 6px;
-	--border-radius: 4px;
-	--input-height: 52px;
-	--input-height-tall: 168px;
-	--input-height-max: 500px;
-	--input-padding: 12px;
-	--form-column-width: 300px;
-	--form-column-max-width: 380px;
-	--form-horizontal-gap: 32px;
-	--form-vertical-gap: 40px;
+
+	// Tooltips
+
+	// Vuetify
+
 }
+
+
+
+/*
+
+// MATCH UP
+
+--tooltip-foreground-color
+--tooltip-background-color
+
+--v-input-font-family
+--v-icon-color
+--v-icon-color-hover
+
+
+
+*/
