--- a/app/src/styles/lib/_flatpickr.scss
+++ b/app/src/styles/lib/_flatpickr.scss
@@ -65,7 +65,7 @@
 	width: auto;
 	padding: 0;
 	font-weight: inherit;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	font-weight: 600;
 }
 
@@ -73,14 +73,14 @@
 	border-radius: var(--border-radius);
 	appearance: none;
 	text-align: right;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	height: 20px;
 	font-weight: 600;
 	color: var(--primary);
 }
 
 .flatpickr-current-month input.cur-year {
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	font-weight: 600;
 	color: var(--primary);
 }
@@ -100,7 +100,7 @@
 }
 
 .flatpickr-current-month .numInputWrapper input {
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	height: 20px;
 	vertical-align: 4px;
 }
@@ -156,7 +156,7 @@ span.flatpickr-weekday {
 	width: 100%;
 	max-width: none;
 	color: var(--foreground-normal-alt);
-	line-height: 36px;
+	line-height: var(--height-small);
 	font-weight: 500;
 	transition: var(--fast) var(--transition);
 	transition-property: background, border-color, color;
