--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -100,7 +100,7 @@
 			top: var(--layout-offset-top);
 			z-index: 4;
 			width: 100%;
-			height: 52px;
+			height: var(--height-large);
 			margin-bottom: 36px;
 			padding: 0 8px;
 			font-weight: inherit !important;
