--- a/app/src/styles/mixins/type-styles.scss
+++ b/app/src/styles/mixins/type-styles.scss
@@ -1,20 +1,20 @@
 @mixin type-title {
 	color: var(--foreground-normal-alt);
 	font-weight: 700;
-	font-size: 24px;
+	font-size: var(--font-size-larger);
 	font-family: var(--family-sans-serif);
 	font-style: normal;
 	line-height: 34px;
 
 	@media (min-width: 600px) {
-		font-size: 24px;
+		font-size: var(--font-size-larger);
 	}
 }
 
 @mixin type-label {
 	color: var(--foreground-normal-alt);
 	font-weight: 600;
-	font-size: 16px;
+	font-size: var(--font-size-medium);
 	font-family: var(--family-sans-serif);
 	font-style: normal;
 	line-height: 19px;
@@ -23,7 +23,7 @@
 @mixin type-text {
 	color: var(--foreground-normal);
 	font-weight: 500;
-	font-size: 14px;
+	font-size: var(--font-size-small);
 	font-family: var(--family-sans-serif);
 	font-style: normal;
 	line-height: 22px;
